--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.0",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "framer-motion": "^10.16.4",
     "kakao-maps-sdk": "^1.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-kakao-maps": "^0.0.13",
+    "react-lorem-ipsum": "^1.4.10",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
